kcms/feedback: Only add audit locations to the model that exist

This prevents audit locations that don't appear on disk from showing up
as clickable links in the KCM, which produces a bad UX whereby you can
try to open the nonexistent location and then you get an ugly error
message instead. So let's just not even show them if they don't exist

BUG: 445959
FIXED-IN: 5.24